--- a/Cadres/app/src/main/res/layout/activity_gb.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb.xml
@@ -197,19 +197,32 @@
         android:layout_height="wrap_content"/>
 
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_marginStart="@dimen/dp_15"
         app:layout_goneMarginTop="@dimen/dp_20"
         android:layout_marginEnd="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/view_bottom"
         app:layout_constraintTop_toBottomOf="@+id/view_top"
         android:layout_height="0dp">
 
         <include layout="@layout/layout_gb_list_title"/>
-    </FrameLayout>
+        <include layout="@layout/layout_gb_list_title_ldgb"/>
+        <include layout="@layout/layout_gb_list_title_gwy"/>
+        <include layout="@layout/layout_gb_list_title_hbgb"/>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dp_20"
+            android:orientation="vertical"
+            android:overScrollMode="never" />
+    </LinearLayout>
 
     <View
         android:id="@+id/view_bottom"
