--- a/Cadres/app/src/main/res/layout/activity_search_detail.xml
+++ b/Cadres/app/src/main/res/layout/activity_search_detail.xml
@@ -35,12 +35,13 @@
         app:layout_constraintStart_toStartOf="@+id/tv_search_content_tip"
         app:layout_constraintTop_toBottomOf="@+id/tv_search_content" />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_marginStart="@dimen/dp_15"
         android:layout_marginEnd="@dimen/dp_15"
         android:layout_width="0dp"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginBottom="@dimen/dp_20"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +49,18 @@
         android:layout_height="0dp">
 
         <include layout="@layout/layout_gb_list_title"/>
-    </FrameLayout>
+        <include layout="@layout/layout_gb_list_title_ldgb"/>
+        <include layout="@layout/layout_gb_list_title_gwy"/>
+        <include layout="@layout/layout_gb_list_title_hbgb"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dp_20"
+            android:orientation="vertical"
+            android:overScrollMode="never" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
