--- a/Cadres/app/src/main/res/layout/layout_gb_list_title_gwy.xml
+++ b/Cadres/app/src/main/res/layout/layout_gb_list_title_gwy.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/cl_gb_list_title"
+    android:id="@+id/cl_gb_list_title_gwy"
     android:layout_height="wrap_content"
     android:visibility="gone"
     tools:visibility="visible"
@@ -43,7 +43,7 @@
 
         <TextView
             android:id="@+id/tv_xrzw"
-            android:layout_width="@dimen/dp_120"
+            android:layout_width="@dimen/dp_140"
             android:layout_height="0dp"
             android:gravity="center"
             android:textSize="@dimen/sp_12"
@@ -56,11 +56,11 @@
             android:text="现任职务"/>
 
         <LinearLayout
-            android:id="@+id/ll_xrzsj"
-            android:layout_width="@dimen/dp_70"
+            android:id="@+id/ll_xrzsj_gwy"
+            android:layout_width="@dimen/dp_90"
             android:layout_height="0dp"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title">
@@ -74,46 +74,7 @@
                     android:text="任现职\n时间"/>
 
                 <ImageView
-                    android:id="@+id/iv_xrzsj"
-                    android:layout_width="@dimen/dp_15"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_sort_defult"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_xrzwcc"
-            android:layout_width="@dimen/dp_70"
-            android:layout_height="0dp"
-            android:textSize="@dimen/sp_12"
-            android:gravity="center"
-            android:paddingStart="@dimen/dp_5"
-            android:paddingEnd="@dimen/dp_5"
-            app:layout_constraintStart_toEndOf="@+id/ll_xrzsj"
-            app:layout_constraintTop_toTopOf="@+id/view_title"
-            app:layout_constraintBottom_toBottomOf="@+id/view_title"
-            android:text="现任职务\n层次"/>
-
-        <LinearLayout
-            android:id="@+id/ll_xrzwccsj"
-            android:layout_width="@dimen/dp_70"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:gravity="center"
-            app:layout_constraintStart_toEndOf="@+id/tv_xrzwcc"
-            app:layout_constraintTop_toTopOf="@+id/view_title"
-            app:layout_constraintBottom_toBottomOf="@+id/view_title">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:textSize="@dimen/sp_12"
-                    android:gravity="center"
-                    android:paddingStart="@dimen/dp_5"
-                    android:text="任现职务\n层次时间"/>
-
-                <ImageView
-                    android:id="@+id/iv_xrzwccsj"
+                    android:id="@+id/iv_xrzsj_gwy"
                     android:layout_width="@dimen/dp_15"
                     android:layout_height="match_parent"
                     android:src="@mipmap/ic_sort_defult"/>
@@ -121,51 +82,13 @@
         </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/tv_zwjb"
-            android:layout_width="@dimen/dp_70"
-            android:layout_height="0dp"
-            android:textSize="@dimen/sp_12"
-            android:gravity="center"
-            android:paddingStart="@dimen/dp_5"
-            android:paddingEnd="@dimen/dp_5"
-            app:layout_constraintStart_toEndOf="@+id/ll_xrzwccsj"
-            app:layout_constraintTop_toTopOf="@+id/view_title"
-            app:layout_constraintBottom_toBottomOf="@+id/view_title"
-            android:text="现任职级"/>
-
         <LinearLayout
-            android:id="@+id/ll_rzjsj"
-            android:layout_width="@dimen/dp_70"
+            android:id="@+id/ll_rzjqssj_gwy"
+            android:layout_width="@dimen/dp_90"
             android:layout_height="0dp"
             android:orientation="horizontal"
             android:gravity="center"
-            app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
-            app:layout_constraintTop_toTopOf="@+id/view_title"
-            app:layout_constraintBottom_toBottomOf="@+id/view_title">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:textSize="@dimen/sp_12"
-                    android:gravity="center"
-                    android:paddingStart="@dimen/dp_5"
-                    android:text="任现职级\n时间"/>
-
-                <ImageView
-                    android:id="@+id/iv_rzjsj"
-                    android:layout_width="@dimen/dp_15"
-                    android:layout_height="match_parent"
-                    android:src="@mipmap/ic_sort_defult"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_rzjqssj"
-            android:layout_width="@dimen/dp_70"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:gravity="center"
-            app:layout_constraintStart_toEndOf="@+id/ll_rzjsj"
+            app:layout_constraintStart_toEndOf="@+id/ll_xrzsj_gwy"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title">
 
@@ -178,19 +101,19 @@
                     android:text="任现职级\n起算时间"/>
 
                 <ImageView
-                    android:id="@+id/iv_rzjqssj"
+                    android:id="@+id/iv_rzjqssj_gwy"
                     android:layout_width="@dimen/dp_15"
                     android:layout_height="match_parent"
                     android:src="@mipmap/ic_sort_defult"/>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/ll_cjgzsj"
-            android:layout_width="@dimen/dp_70"
+            android:id="@+id/ll_cjgzsj_gwy"
+            android:layout_width="@dimen/dp_90"
             android:layout_height="0dp"
-            android:orientation="horizontal"
             android:gravity="center"
-            app:layout_constraintStart_toEndOf="@+id/ll_rzjqssj"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toEndOf="@+id/ll_rzjqssj_gwy"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title">
 
@@ -203,7 +126,7 @@
                     android:text="参加工作\n时间"/>
 
                 <ImageView
-                    android:id="@+id/iv_cjgzsj"
+                    android:id="@+id/iv_cjgzsj_gwy"
                     android:layout_width="@dimen/dp_15"
                     android:layout_height="match_parent"
                     android:src="@mipmap/ic_sort_defult"/>
@@ -217,7 +140,7 @@
             android:gravity="center"
             android:paddingStart="@dimen/dp_5"
             android:paddingEnd="@dimen/dp_5"
-            app:layout_constraintStart_toEndOf="@+id/ll_cjgzsj"
+            app:layout_constraintStart_toEndOf="@+id/ll_cjgzsj_gwy"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title"
             android:text="性别"/>
@@ -236,8 +159,8 @@
             android:text="籍贯"/>
 
         <LinearLayout
-            android:id="@+id/ll_csny"
-            android:layout_width="@dimen/dp_70"
+            android:id="@+id/ll_csny_gwy"
+            android:layout_width="@dimen/dp_90"
             android:layout_height="0dp"
             android:orientation="horizontal"
             android:gravity="center"
@@ -254,7 +177,7 @@
                     android:text="出生年月\n(年龄)"/>
 
                 <ImageView
-                    android:id="@+id/iv_csny"
+                    android:id="@+id/iv_csny_gwy"
                     android:layout_width="@dimen/dp_15"
                     android:layout_height="match_parent"
                     android:src="@mipmap/ic_sort_defult"/>
@@ -268,7 +191,7 @@
             android:gravity="center"
             android:paddingStart="@dimen/dp_5"
             android:paddingEnd="@dimen/dp_5"
-            app:layout_constraintStart_toEndOf="@+id/ll_csny"
+            app:layout_constraintStart_toEndOf="@+id/ll_csny_gwy"
             app:layout_constraintEnd_toStartOf="@+id/tv_qrzzy"
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -301,6 +224,7 @@
             app:layout_constraintTop_toTopOf="@+id/view_title"
             app:layout_constraintBottom_toBottomOf="@+id/view_title"
             android:text="在职\n文化程度"/>
+
 
 
 
