--- a/Cadres/app/src/main/res/layout/activity_gb_drawer_right_info2.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_drawer_right_info2.xml
@@ -1117,7 +1117,7 @@
         android:layout_height="@dimen/dp_60"
         app:layout_constraintTop_toBottomOf="@+id/view_zwlb"
         app:layout_constraintStart_toStartOf="@+id/view_right"
-        app:layout_constraintEnd_toEndOf="@+id/view_end"/>
+        app:layout_constraintEnd_toEndOf="@+id/view_right"/>
 
     <TextView
         android:id="@+id/tv_bz_title"
@@ -1207,10 +1207,47 @@
         android:layout_height="0dp"/>
 
     <View
-        android:id="@+id/view_lx"
+        android:id="@+id/view_rxzjqssj"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_60"
         app:layout_constraintTop_toBottomOf="@+id/view_rxzjsj"
+        app:layout_constraintStart_toStartOf="@+id/view_end"
+        app:layout_constraintEnd_toEndOf="@+id/view_end"/>
+
+    <TextView
+        android:id="@+id/tv_rxzjqssj_title"
+        android:layout_width="@dimen/dp_80"
+        app:layout_constraintTop_toTopOf="@+id/view_rxzjqssj"
+        app:layout_constraintBottom_toBottomOf="@+id/view_rxzjqssj"
+        android:gravity="center"
+        android:text="任现职级\n起算时间"
+        android:textSize="@dimen/sp_12"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        android:background="@color/color_fdf5ed"
+        app:layout_constraintStart_toStartOf="@+id/view_rxzjqssj"
+        android:layout_height="0dp"/>
+
+    <TextView
+        android:id="@+id/tv_rxzjqssj"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_rxzjqssj"
+        app:layout_constraintEnd_toEndOf="@+id/view_rxzjqssj"
+        app:layout_constraintBottom_toBottomOf="@+id/view_rxzjqssj"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        tools:text="任现职级\n起算时间"
+        android:textSize="@dimen/sp_12"
+        app:layout_constraintStart_toEndOf="@+id/tv_rxzjqssj_title"
+        android:layout_height="0dp"/>
+
+
+    <View
+        android:id="@+id/view_lx"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_60"
+        app:layout_constraintTop_toBottomOf="@+id/view_rxzjqssj"
         app:layout_constraintStart_toStartOf="@+id/view_end"
         app:layout_constraintEnd_toEndOf="@+id/view_end"/>
 
@@ -1220,7 +1257,7 @@
         app:layout_constraintTop_toTopOf="@+id/view_lx"
         app:layout_constraintBottom_toBottomOf="@+id/view_lx"
         android:gravity="center"
-        android:text="任现职级\n起算时间"
+        android:text="类型"
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
@@ -1237,9 +1274,9 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        tools:text="任现职级\n起算时间"
+        tools:text="类型"
         android:textSize="@dimen/sp_12"
-        app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_lx_title"
         android:layout_height="0dp"/>
 
 <!--    竖线-->
@@ -1321,7 +1358,7 @@
         app:layout_constraintStart_toStartOf="@+id/view_head"
         app:layout_constraintTop_toTopOf="@+id/view_rxzjsj"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintBottom_toBottomOf="@+id/view_lx"/>
+        app:layout_constraintBottom_toBottomOf="@+id/view_jtzz"/>
 
     <View
         android:layout_width="@dimen/dp_1"
@@ -1329,7 +1366,7 @@
         app:layout_constraintStart_toStartOf="@+id/tv_rxzjsj"
         app:layout_constraintTop_toTopOf="@+id/view_rxzjsj"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintBottom_toBottomOf="@+id/view_lx"/>
+        app:layout_constraintBottom_toBottomOf="@+id/view_jtzz"/>
 
     <View
         android:layout_width="@dimen/dp_1"
