--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -67,8 +67,10 @@
     <dimen name="dp_460">460dp</dimen>
     <dimen name="dp_480">480dp</dimen>
     <dimen name="dp_500">500dp</dimen>
+    <dimen name="dp_560">560dp</dimen>
     <dimen name="dp_600">600dp</dimen>
     <dimen name="dp_700">700dp</dimen>
+    <dimen name="dp_720">720dp</dimen>
     <dimen name="dp_740">740dp</dimen>
     <dimen name="dp_800">800dp</dimen>
     <dimen name="dp_900">900dp</dimen>
