--- a/Cadres/app/src/main/res/layout/activity_yjjc_vote.xml
+++ b/Cadres/app/src/main/res/layout/activity_yjjc_vote.xml
@@ -17,6 +17,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_xh"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_3"
+        android:paddingEnd="@dimen/dp_3"
+        android:textSize="@dimen/sp_12"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="@+id/view_title"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:text="序号"/>
+
+    <View
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_xh"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:background="@color/color_ffd7b4"/>
 
     <TextView
         android:id="@+id/tv_name"
@@ -26,7 +47,7 @@
         android:paddingEnd="@dimen/dp_3"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
-        app:layout_constraintStart_toStartOf="@+id/view_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_xh"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:text="姓名"/>
@@ -74,7 +95,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_3"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="现任职时间"/>
+        android:text="任现职时间"/>
 
     <View
         android:layout_width="@dimen/dp_1"
