--- a/Cadres/app/src/main/res/layout/fragment_yjjc_cadre2.xml
+++ b/Cadres/app/src/main/res/layout/fragment_yjjc_cadre2.xml
@@ -368,53 +368,53 @@
                     android:layout_height="0dp"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
                     app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
-                    app:layout_constraintEnd_toStartOf="@+id/tv_zzxw"
-                    app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                    android:background="@color/color_ffd7b4"/>
-
-                <TextView
-                    android:id="@+id/tv_zzxw"
-                    android:layout_width="@dimen/dp_80"
-                    android:layout_height="0dp"
-                    android:gravity="center"
-                    android:textSize="@dimen/sp_12"
-                    android:paddingStart="@dimen/dp_3"
-                    android:paddingEnd="@dimen/dp_3"
-                    app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
-                    app:layout_constraintTop_toTopOf="@+id/view_title"
-                    app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                    android:text="在职学位"/>
-
-                <View
-                    android:layout_width="@dimen/dp_1"
-                    android:layout_height="0dp"
-                    app:layout_constraintTop_toTopOf="@+id/view_title"
-                    app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
-                    app:layout_constraintEnd_toStartOf="@+id/tv_qrzxw"
-                    app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                    android:background="@color/color_ffd7b4"/>
-
-                <TextView
-                    android:id="@+id/tv_qrzxw"
-                    android:layout_width="@dimen/dp_80"
-                    android:layout_height="0dp"
-                    android:gravity="center"
-                    android:textSize="@dimen/sp_12"
-                    android:paddingStart="@dimen/dp_3"
-                    android:paddingEnd="@dimen/dp_3"
-                    app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
-                    app:layout_constraintTop_toTopOf="@+id/view_title"
-                    app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                    android:text="全日制学位"/>
-
-                <View
-                    android:layout_width="@dimen/dp_1"
-                    android:layout_height="0dp"
-                    app:layout_constraintTop_toTopOf="@+id/view_title"
-                    app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
                     app:layout_constraintEnd_toStartOf="@+id/tv_zyjszw"
                     app:layout_constraintBottom_toBottomOf="@+id/view_title"
                     android:background="@color/color_ffd7b4"/>
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_zzxw"-->
+<!--                    android:layout_width="@dimen/dp_80"-->
+<!--                    android:layout_height="0dp"-->
+<!--                    android:gravity="center"-->
+<!--                    android:textSize="@dimen/sp_12"-->
+<!--                    android:paddingStart="@dimen/dp_3"-->
+<!--                    android:paddingEnd="@dimen/dp_3"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--                    android:text="在职学位"/>-->
+
+<!--                <View-->
+<!--                    android:layout_width="@dimen/dp_1"-->
+<!--                    android:layout_height="0dp"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/tv_zzxw"-->
+<!--                    app:layout_constraintEnd_toStartOf="@+id/tv_qrzxw"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--                    android:background="@color/color_ffd7b4"/>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_qrzxw"-->
+<!--                    android:layout_width="@dimen/dp_80"-->
+<!--                    android:layout_height="0dp"-->
+<!--                    android:gravity="center"-->
+<!--                    android:textSize="@dimen/sp_12"-->
+<!--                    android:paddingStart="@dimen/dp_3"-->
+<!--                    android:paddingEnd="@dimen/dp_3"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/tv_zzxw"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--                    android:text="全日制学位"/>-->
+
+<!--                <View-->
+<!--                    android:layout_width="@dimen/dp_1"-->
+<!--                    android:layout_height="0dp"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"-->
+<!--                    app:layout_constraintEnd_toStartOf="@+id/tv_zyjszw"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--                    android:background="@color/color_ffd7b4"/>-->
 
                 <TextView
                     android:id="@+id/tv_zyjszw"
@@ -424,7 +424,7 @@
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
-                    app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
+                    app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
                     app:layout_constraintBottom_toBottomOf="@+id/view_title"
                     android:text="专业技术职务"/>
