--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
@@ -167,53 +167,53 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
-        app:layout_constraintEnd_toStartOf="@+id/tv_zzxw"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:background="@color/color_ffd7b4"/>
-
-    <TextView
-        android:id="@+id/tv_zzxw"
-        android:layout_width="@dimen/dp_80"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:textSize="@dimen/sp_12"
-        android:paddingStart="@dimen/dp_5"
-        android:paddingEnd="@dimen/dp_5"
-        app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        tools:text="在职学位"/>
-
-    <View
-        android:layout_width="@dimen/dp_1"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
-        app:layout_constraintEnd_toStartOf="@+id/tv_qrzxw"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:background="@color/color_ffd7b4"/>
-
-    <TextView
-        android:id="@+id/tv_qrzxw"
-        android:layout_width="@dimen/dp_80"
-        android:textSize="@dimen/sp_12"
-        android:layout_height="0dp"
-        android:paddingStart="@dimen/dp_5"
-        android:paddingEnd="@dimen/dp_5"
-        android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        tools:text="全日制学位"/>
-
-    <View
-        android:layout_width="@dimen/dp_1"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
         app:layout_constraintEnd_toStartOf="@+id/tv_zyjszw"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
+
+<!--    <TextView-->
+<!--        android:id="@+id/tv_zzxw"-->
+<!--        android:layout_width="@dimen/dp_80"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:gravity="center"-->
+<!--        android:textSize="@dimen/sp_12"-->
+<!--        android:paddingStart="@dimen/dp_5"-->
+<!--        android:paddingEnd="@dimen/dp_5"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--        tools:text="在职学位"/>-->
+
+<!--    <View-->
+<!--        android:layout_width="@dimen/dp_1"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/tv_zzxw"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/tv_qrzxw"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--        android:background="@color/color_ffd7b4"/>-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tv_qrzxw"-->
+<!--        android:layout_width="@dimen/dp_80"-->
+<!--        android:textSize="@dimen/sp_12"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:paddingStart="@dimen/dp_5"-->
+<!--        android:paddingEnd="@dimen/dp_5"-->
+<!--        android:gravity="center"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/tv_zzxw"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--        tools:text="全日制学位"/>-->
+
+<!--    <View-->
+<!--        android:layout_width="@dimen/dp_1"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/view_title"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/tv_zyjszw"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/view_title"-->
+<!--        android:background="@color/color_ffd7b4"/>-->
 
     <TextView
         android:id="@+id/tv_zyjszw"
@@ -223,7 +223,7 @@
         android:paddingEnd="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
+        app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="专业技术职务"/>
