--- a/Cadres/app/src/main/res/layout/item_yjjc_vote.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_vote.xml
@@ -7,12 +7,32 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:id="@+id/tv_xh"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/sp_12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="111"/>
+
+    <View
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_xh"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/color_ffd7b4"/>
+
+    <TextView
         android:id="@+id/tv_name"
         android:layout_width="@dimen/dp_80"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="@dimen/sp_12"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_xh"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="姓名"/>
@@ -58,7 +78,7 @@
         app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="现任职时间"/>
+        tools:text="任现职时间"/>
 
     <View
         android:layout_width="@dimen/dp_1"
