--- a/Cadres/app/src/main/res/layout/title_bm_gwy_fgzldj.xml
+++ b/Cadres/app/src/main/res/layout/title_bm_gwy_fgzldj.xml
@@ -46,7 +46,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官助理"
+        android:text="三级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_hdzs"
         app:layout_constraintEnd_toStartOf="@+id/tv_hdzs_2"
         app:layout_constraintStart_toStartOf="@+id/view_hdzs"
@@ -69,7 +69,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官助理"
+        android:text="四级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_hdzs"
         app:layout_constraintEnd_toStartOf="@+id/tv_hdzs_3"
         app:layout_constraintStart_toEndOf="@+id/tv_hdzs_1"
@@ -91,7 +91,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="一二级法官/检查官助理"
+        android:text="一二级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_hdzs"
         app:layout_constraintEnd_toStartOf="@+id/tv_hdzs_4"
         app:layout_constraintStart_toEndOf="@+id/tv_hdzs_2"
@@ -113,7 +113,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三四级法官/检查官助理"
+        android:text="三四级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_hdzs"
         app:layout_constraintEnd_toEndOf="@+id/view_hdzs"
         app:layout_constraintStart_toEndOf="@+id/tv_hdzs_3"
@@ -159,7 +159,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官助理"
+        android:text="三级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_2"
         app:layout_constraintStart_toStartOf="@+id/view_spqk"
@@ -181,7 +181,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官助理"
+        android:text="四级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_3"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_1"
@@ -203,7 +203,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="一级法官/检查官助理"
+        android:text="一级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_4"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_2"
@@ -225,7 +225,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="二级法官/检查官助理"
+        android:text="二级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_5"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_3"
@@ -248,7 +248,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级法官/检查官助理"
+        android:text="三级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_6"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_4"
@@ -270,7 +270,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级法官/检查官助理"
+        android:text="四级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_7"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_5"
@@ -292,7 +292,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="五级法官/检查官助理"
+        android:text="五级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toEndOf="@+id/view_spqk"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_6"
@@ -336,7 +336,7 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官助理"
+        android:text="三级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_cpqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_cpqk_2"
         app:layout_constraintStart_toStartOf="@+id/view_cpqk"
@@ -359,7 +359,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官助理"
+        android:text="四级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_cpqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_cpqk_3"
         app:layout_constraintStart_toEndOf="@+id/tv_cpqk_1"
@@ -381,7 +381,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="一二级法官/检查官助理"
+        android:text="一二级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_cpqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_cpqk_4"
         app:layout_constraintStart_toEndOf="@+id/tv_cpqk_2"
@@ -403,7 +403,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三四级法官/检查官助理"
+        android:text="三四级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_cpqk"
         app:layout_constraintEnd_toEndOf="@+id/view_cpqk"
         app:layout_constraintStart_toEndOf="@+id/tv_cpqk_3"
@@ -448,7 +448,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官助理"
+        android:text="三级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_kqqk_2"
         app:layout_constraintStart_toStartOf="@+id/view_kqqk"
@@ -471,7 +471,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官助理"
+        android:text="四级高级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_kqqk_3"
         app:layout_constraintStart_toEndOf="@+id/tv_kqqk_1"
@@ -494,7 +494,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="一二级法官/检查官助理"
+        android:text="一二级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_kqqk_4"
         app:layout_constraintStart_toEndOf="@+id/tv_kqqk_2"
@@ -517,7 +517,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三四级法官/检查官助理"
+        android:text="三四级法官/检察官助理"
         app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
         app:layout_constraintEnd_toEndOf="@+id/view_kqqk"
         app:layout_constraintStart_toEndOf="@+id/tv_kqqk_3"
