--- a/Cadres/app/src/main/res/layout/title_bm_gwy_fgdj.xml
+++ b/Cadres/app/src/main/res/layout/title_bm_gwy_fgdj.xml
@@ -46,7 +46,7 @@
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
-        android:text="三级高级法官/检查官"
+        android:text="三级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_hdzs"
         app:layout_constraintEnd_toStartOf="@+id/tv_hdzs_2"
         app:layout_constraintStart_toStartOf="@+id/view_hdzs"
@@ -69,7 +69,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官"
+        android:text="四级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_hdzs"
         app:layout_constraintEnd_toEndOf="@+id/view_hdzs"
         app:layout_constraintStart_toEndOf="@+id/tv_hdzs_1"
@@ -114,7 +114,7 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官"
+        android:text="三级高级法官/检察官"
         android:textSize="@dimen/sp_12"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_2"
@@ -137,7 +137,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官"
+        android:text="四级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_3"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_1"
@@ -159,7 +159,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="一级法官/检查官"
+        android:text="一级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_4"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_2"
@@ -181,7 +181,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="二级法官/检查官"
+        android:text="二级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_5"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_3"
@@ -204,7 +204,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级法官/检查官"
+        android:text="三级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_6"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_4"
@@ -226,7 +226,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级法官/检查官"
+        android:text="四级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_spqk_7"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_5"
@@ -248,7 +248,7 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="五级法官/检查官"
+        android:text="五级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_spqk"
         app:layout_constraintEnd_toEndOf="@+id/view_spqk"
         app:layout_constraintStart_toEndOf="@+id/tv_spqk_6"
@@ -292,7 +292,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官"
+        android:text="三级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_cpqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_cpqk_2"
         app:layout_constraintStart_toStartOf="@+id/view_cpqk"
@@ -315,7 +315,7 @@
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官"
+        android:text="四级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_cpqk"
         app:layout_constraintEnd_toEndOf="@+id/view_cpqk"
         app:layout_constraintStart_toEndOf="@+id/tv_cpqk_1"
@@ -360,7 +360,7 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
-        android:text="三级高级法官/检查官"
+        android:text="三级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
         app:layout_constraintEnd_toStartOf="@+id/tv_kqqk_2"
         app:layout_constraintStart_toStartOf="@+id/view_kqqk"
@@ -383,7 +383,7 @@
         android:paddingStart="@dimen/dp_5"
         android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
-        android:text="四级高级法官/检查官"
+        android:text="四级高级法官/检察官"
         app:layout_constraintBottom_toBottomOf="@+id/view_kqqk"
         app:layout_constraintEnd_toEndOf="@+id/view_kqqk"
         app:layout_constraintStart_toEndOf="@+id/tv_kqqk_1"
