--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre_left2.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre_left2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="@dimen/dp_40"
     android:id="@+id/cl_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,10 +11,19 @@
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      tools:text="山东分公司的风格"
+     android:textSize="@dimen/sp_12"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:gravity="center"
-     android:paddingStart="@dimen/dp_15"
+     android:paddingStart="@dimen/dp_5"
      app:layout_constraintBottom_toBottomOf="parent"/>
+
+ <View
+     android:layout_width="0dp"
+     android:layout_height="@dimen/dp_1"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintBottom_toBottomOf="@+id/tv_fzName"
+     android:background="@color/color_ffd7b4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
