--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre_left2.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre_left2.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_40"
-    android:id="@+id/cl_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
  <TextView
      android:id="@+id/tv_fzName"
      android:layout_width="wrap_content"
-     android:layout_height="match_parent"
+     android:layout_height="@dimen/dp_40"
      tools:text="山东分公司的风格"
      android:textSize="@dimen/sp_12"
      app:layout_constraintStart_toStartOf="parent"
