--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre2.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre2.xml
@@ -13,6 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center"
+        android:textStyle="bold"
         android:paddingStart="@dimen/dp_15"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
