决策下划线加粗

--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre_left.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre_left.xml
@@ -130,11 +130,22 @@
         android:background="@color/color_ffd7b4"/>
 
     <View
+        android:id="@+id/line_bold"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_5"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintStart_toStartOf="@+id/view_title"
+        app:layout_constraintEnd_toEndOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:background="@color/color_ffd7b4"/>
+
+    <View
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_1"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintEnd_toEndOf="@+id/view_title"
-        app:layout_constraintTop_toBottomOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
